# DeepResearcher

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Deep Researcher 项目架构设计.md  README.md  TODOS.md  evaluate.py  program.md  pyproject.toml  queries.json  queries.md  restricts.md  results.tsv  架构评估与优化方案.md
.claude/skills/gemini-deep-research/: SKILL.md
deep_researcher/: __init__.py  cli.py  config.py  depth_prompts.py  depth_workflow.py  evidence_profiles.json  json_utils.py  llm.py  model_capabilities.json  model_capabilities.py  prompts.py  rate_limit.py  search.py  semantic_registry.py  sonar_adapter.py  source_packs.json  state.py  tracing.py  workflow.py  workspace_sources.py
docs/: README.md  architecture.md  model-context.md  planning-demo.md  planning-mode.md  query-tests.md
exp/: autoresearch-report.md  rewrite-v1-report.md
plan/: adaptive-research-agent-rewrite.md  gdr-planning-gap-analysis.md  gdr-reasoning-adaptation.md
sample_result/: Deep Research 技术探索与实现.md  FICC 宏观对冲框架浅析.md  煤化工替代石油化工产物分析.md  阳光电源投资价值深度分析 (1).md
slides/: package-lock.json  package.json  slides.md
tests/: test_cli_queries.py  test_config.py  test_depth_workflow.py  test_evaluate.py  test_gap_resolution.py  test_json_utils.py  test_link_following.py  test_llm_routing.py  test_mock_workflow.py  test_model_capabilities.py  test_query_rewrite.py  test_reasoning_scaffold.py  test_report_validation.py  test_search.py  test_semantic_registry.py  test_sonar_adapter.py  test_source_credibility.py  test_workspace_sources.py
