[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-researcher"
version = "0.1.0"
description = "A debuggable, model-agnostic deep research workflow."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "openai>=2.29.0",
    "pypdf>=5.4.0",
]

[project.scripts]
deep-researcher = "deep_researcher.cli:main"

[tool.setuptools]
packages = ["deep_researcher"]

[tool.setuptools.package-data]
deep_researcher = ["*.json"]

[tool.uv]
package = true
